Bug 169379 - Conditional formats on separate columns are collapsed down to a single range when saved.
Summary: Conditional formats on separate columns are collapsed down to a single range ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: XLSX-Conditional-Formatting
  Show dependency treegraph
 
Reported: 2025-11-11 08:17 UTC by chocolate447
Modified: 2025-11-14 11:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description chocolate447 2025-11-11 08:17:42 UTC
Description:
Separate formats as edited:
A:A
B:B
C:C

Single range after saving and re-opening:
A:A,B:B,C:C

Details and sample file here:
https://ask.libreoffice.org/t/updated-librecalc-to-25-8-2-2-conditional-formats-broken/128384

Steps to Reproduce:
1. Create conditional formats on separate columns
2. Save and close file
3. Re-open file


Actual Results:
The different formats on separate columns are collapsed down to a single format.


Expected Results:
The separate formats remain distinct after saving.



Reproducible: Always


User Profile Reset: No

Additional Info:
See link for details and sample file:
https://ask.libreoffice.org/t/updated-librecalc-to-25-8-2-2-conditional-formats-broken/128384
Comment 1 Saburo 2025-11-12 06:20:17 UTC
The problem is not with saving, but with opening the xlsx file.
The problem does not occur when opening a file saved in ods.

reproduce with
2025-11-12
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded

https://ask.libreoffice.org/t/updated-librecalc-to-25-8-2-2-conditional-formats-broken/128384/9
bibisected with win64-25.8 (using Untitled2-.xlsx)

commit e2cc1f8a6bd27907800416a5396942a0c7ca56ce
author	Noel Grandin
tdf#134864 speedup load of pathological conditional formats in XLS


adding CC: Noel Grandin
Please, take a look?
Comment 2 Noel Grandin 2025-11-12 09:52:53 UTC
So we can only have it one of two ways.

Either 

(a) we load weird documents like in tdf#134864 quickly

or

(b) we preserve the exact way that conditional formatting ranges are set up.

Which is it going to be?
Comment 3 Saburo 2025-11-12 13:32:17 UTC
(In reply to Noel Grandin from comment #2)
> So we can only have it one of two ways.
> 
> Either 
> 
> (a) we load weird documents like in tdf#134864 quickly
> 
> or
> 
> (b) we preserve the exact way that conditional formatting ranges are set up.
> 
> Which is it going to be?

Making it an option that users can switch on and off would make the code more complicated, wouldn't it?
Comment 4 Noel Grandin 2025-11-12 13:38:21 UTC
(In reply to Saburo from comment #3)
> 
> Making it an option that users can switch on and off would make the code
> more complicated, wouldn't it?

Yeah, that would be very complicated
Comment 5 Commit Notification 2025-11-14 11:18:49 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/204d7655010199bb1c70ce7dee5428f2f02d4808

tdf#169379 Conditional formats collapsed

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.