tdf#169379 Conditional formats collapsed

We were combining conditional formats that the user wanted kept separate.

This is a regression from
    commit e2cc1f8a6bd27907800416a5396942a0c7ca56ce
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Fri Feb 28 10:51:44 2025 +0200
    tdf#134864 speedup load of pathological conditional formats in XLS

We lose some performance by doing less deduplication, but luckily not too much,
the pathological document from tdf#134864 loads in about twice the time now.
(but still much much faster than before the optimisation)

Change-Id: Id8c5741ad69bec7ca43f1b0fb53022bc617fffdd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194009
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins